--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "amani-portfolio",
   "version": "1.0.0",
   "private": true,
@@ -8,7 +9,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vitejs/plugin-react": "^5.1.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "react": "^18.3.1",
@@ -16,6 +16,7 @@
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
@@ -30,7 +31,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/aissamani/amani-portfolio/issues"
   },
